kubernetes/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata: #Labels can be used to select objects and to find collections of objects that satisfy certain conditions
  name: rakusale
spec:
  # レプリカ数の指定
  replicas: 2
  # Podのテンプレート(PodTemplate)
  template:
    metadata:
      labels:
        app: rakusale
    spec:
      containers:
        - name: api
          image: gcr.io/miraikeitai2018-rakusale/github.com/2018-miraikeitai-org/rakusale-api:41e0265
          ports:
            - containerPort: 9001
        - name: cloudsql-proxy
          image: b.gcr.io/cloudsql-docker/gce-proxy:latest
          command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                    "-instances=miraikeitai2018-rakusale:asia-east1:rakusale-prod=tcp:0.0.0.0:3306",
                    "-credential_file=/secrets/cloudsql/credentials.json"]
          volumeMounts:
            - name: cloudsql-oauth-credentials
              mountPath: /secrets/cloudsql
              readOnly: true
            - name: cloudsql
              mountPath: /cloudsql
      volumes:
        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: cloudsql
          emptyDir:
