kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rakusale
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9001
    name: http
  selector:
    app: rakusale
